Fix all deprecation and unchecked warnings
- Replace deprecated setDisplayName/getDisplayName/getLore with Adventure Component API
- Replace deprecated getTitle() with title() (Component) in InventoryView
- Replace deprecated createInventory(String) with createInventory(Component)
- Replace deprecated new URL(String) with URI.create().toURL()
- Suppress BukkitObjectOutputStream/InputStream deprecation (format change would break existing replays)
- Fix unchecked raw type usage in ReplayExporter with proper wildcards
- Add @SuppressWarnings for unavoidable unchecked casts (EntityData, Map/List from deserialized data)